--- a/scripts/install
+++ b/scripts/install
@@ -97,8 +97,8 @@ ynh_setup_source --dest_dir="$final_path"
 chmod 750 "$final_path"
 chmod -R o-rwx "$final_path"
 chown -R $app:www-data "$final_path"
-setfacl -dR -m g:"www-data":rwX -m u:$app:rwX "$final_path/var"
-setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var"
+setfacl -dR -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
+setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
 
 #=================================================
 # NGINX CONFIGURATION
@@ -130,8 +130,8 @@ ynh_composer_exec --phpversion="$phpversion" --workdir="$final_path" --commands=
 chmod 750 "$final_path"
 chmod -R o-rwx "$final_path"
 chown -R $app:www-data "$final_path"
-setfacl -dR -m g:"www-data":rwX -m u:$app:rwX "$final_path/var"
-setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var"
+setfacl -dR -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
+setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
 
 #=================================================
 # ADD A CONFIGURATION
@@ -164,7 +164,7 @@ ynh_script_progression --message="Installing Kimai2..."
 update-alternatives --set php /usr/bin/php$phpversion
 
 pushd "$final_path"
-	php$phpversion bin/console kimai:install -n
+	ynh_exec_as $app php$phpversion bin/console kimai:install -n
 popd
 
 update-alternatives --set php /usr/bin/php${YNH_DEFAULT_PHP_VERSION}
