Add config panel

--- a/scripts/install
+++ b/scripts/install
@@ -135,8 +135,7 @@ setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
 #=================================================
 ynh_script_progression --message="Adding a configuration file..."
 
-if [ $registration -eq 1  ]
-then
+if [ $registration -eq 1  ]; then
 	registration="true"
 else
 	registration="false"
@@ -158,13 +157,9 @@ chown $app:$app "$final_path/.env"
 #=================================================
 ynh_script_progression --message="Installing Kimai2..."
 
-#update-alternatives --set php /usr/bin/php$phpversion
-
 pushd "$final_path"
 	ynh_exec_as $app php$phpversion bin/console kimai:install -n
 popd
-
-#update-alternatives --set php /usr/bin/php${YNH_DEFAULT_PHP_VERSION}
 
 #=================================================
 # GENERIC FINALIZATION
