--- a/scripts/install
+++ b/scripts/install
@@ -105,7 +105,7 @@ setfacl -R -m g:"www-data":rwX -m u:$app:rwX "$final_path/var/"
 ynh_script_progression --message="Configuring PHP-FPM..." --weight=1
 
 # Create a dedicated PHP-FPM config
-ynh_add_fpm_config
+ynh_add_fpm_config --usage=low --footprint=low
 phpversion=$(ynh_app_setting_get --app=$app --key=phpversion)
 
 #=================================================
