--- a/scripts/install
+++ b/scripts/install
@@ -52,7 +52,7 @@ ynh_add_nginx_config
 #=================================================
 # BUILD KIMAI2
 #=================================================
-ynh_script_progression --message="Building Kimai2..." --weight=1
+ynh_script_progression --message="Building $app..." --weight=1
 
 ynh_install_composer --phpversion="$phpversion" --workdir="$install_dir" --install_args="--optimize-autoloader"
 ynh_composer_exec --phpversion="$phpversion" --workdir="$install_dir" --commands="require laminas/laminas-ldap"
@@ -89,7 +89,7 @@ chown $app:$app "$install_dir/.env"
 #=================================================
 # INSTALL KIMAI2
 #=================================================
-ynh_script_progression --message="Installing Kimai2..." --weight=1
+ynh_script_progression --message="Installing $app..." --weight=1
 
 pushd "$install_dir"
 	ynh_exec_as $app php$phpversion bin/console kimai:install -n
