--- a/scripts/install
+++ b/scripts/install
@@ -54,8 +54,8 @@ ynh_add_nginx_config
 #=================================================
 ynh_script_progression --message="Building $app..." --weight=1
 
-ynh_install_composer --phpversion="$phpversion" --workdir="$install_dir" --install_args="--optimize-autoloader"
-ynh_composer_exec --phpversion="$phpversion" --workdir="$install_dir" --commands="require laminas/laminas-ldap"
+ynh_install_composer --install_args="--optimize-autoloader"
+ynh_composer_exec --commands="require laminas/laminas-ldap"
 
 chmod 750 "$install_dir"
 chmod -R o-rwx "$install_dir"
