--- a/scripts/install
+++ b/scripts/install
@@ -20,7 +20,6 @@ random_key=$(ynh_string_random --length=32)
 #=================================================
 ynh_script_progression --message="Storing installation settings..." --weight=1
 
-ynh_app_setting_set --app=$app --key=registration --value=$registration
 ynh_app_setting_set --app=$app --key=random_key --value=$random_key
 
 #=================================================
@@ -75,13 +74,13 @@ else
 	registration="false"
 fi
 
-ynh_add_config --template="../conf/local.yaml" --destination="$install_dir/config/packages/local.yaml"
+ynh_add_config --template="local.yaml" --destination="$install_dir/config/packages/local.yaml"
 
 chmod 400 "$install_dir/config/packages/local.yaml"
 chown $app:$app "$install_dir/config/packages/local.yaml"
 
 # Configure environement
-ynh_add_config --template="../conf/.env" --destination="$install_dir/.env"
+ynh_add_config --template=".env" --destination="$install_dir/.env"
 
 chmod 400 "$install_dir/.env"
 chown $app:$app "$install_dir/.env"
