--- a/scripts/install
+++ b/scripts/install
@@ -47,7 +47,7 @@ chmod 400 "$install_dir/config/packages/local.yaml"
 chown "$app:$app" "$install_dir/config/packages/local.yaml"
 
 # Configure environement
-ynh_add_config --template=".env" --destination="$install_dir/.env"
+ynh_add_config --template="dot_env" --destination="$install_dir/.env"
 
 chmod 400 "$install_dir/.env"
 chown "$app:$app" "$install_dir/.env"
@@ -55,7 +55,7 @@ chown "$app:$app" "$install_dir/.env"
 #=================================================
 # BUILD KIMAI2
 #=================================================
-ynh_script_progression --message="Building Kimai2..." --weight=1
+ynh_script_progression --message="Building $app..." --weight=1
 
 ynh_install_composer --phpversion="$phpversion" --workdir="$install_dir" --install_args="--optimize-autoloader --no-interaction"
 ynh_composer_exec --phpversion="$phpversion" --workdir="$install_dir" --commands="require laminas/laminas-ldap"
@@ -69,7 +69,7 @@ setfacl -R -m g:"www-data":rwX -m u:"$app":rwX "$install_dir/var/"
 #=================================================
 # INSTALL KIMAI2
 #=================================================
-ynh_script_progression --message="Installing Kimai2..." --weight=1
+ynh_script_progression --message="Installing $app..." --weight=1
 
 pushd "$install_dir"
     ynh_exec_as "$app" "php$phpversion" bin/console kimai:install -n
